Create endpoint to query measurements
