# pool-temp-backend/src/measurement/dto/measurement-list.dto.ts
@@ -1,0 +1,5 @@
+import { MeasurementDto } from './measurement.dto';
+
+export class MeasurementListDto {
+  items: MeasurementDto[];
+}
